--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "core-js": "^3.25.3",
     "node-sass": "^9.0.0",
     "nuxt": "^2.15.8",
-    "sass-loader": "^14.2.1",
+    "sass-loader": "^10.4.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
-  },
-  "devDependencies": {}
+    "vue-template-compiler": "^2.7.10",
+    "vue-types": "^5.1.2"
+  }
 }
